Fix dark mode, reduce index row spacing

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -96,7 +96,9 @@ body {
 /* ---------------------------------------------------------- */
 
 @media (min-width: 900px) {
+/*
     .home-template .post-feed,
+*/
     .tag-template .post-feed,
     .author-template .post-feed {
         padding: 40px 0 5vw;
@@ -309,6 +311,13 @@ body {
     font-size: 1.3rem;
 }
 
+/* allow horizontal scrolling of post titles if they get too long on small screens */
+@media (hover: none) {
+    .site-nav {
+        overflow-x: scroll;
+    }
+}
+
 .site-nav-left-wrapper {
     position: relative;
     flex: 1 0 auto;
@@ -337,8 +346,7 @@ body {
     flex: 1 0 auto;
     display: flex;
     align-items: center;
-    overflow-x: auto;
-    overflow-y: hidden;
+    overflow: hidden;
     -webkit-overflow-scrolling: touch;
     margin-right: 10px;
     padding: 10px 0 80px;
@@ -649,8 +657,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     display: flex;
     flex-wrap: wrap;
 /*    margin: 0 -20px; */
-    padding: 50px 0 0;
-/*    background: #fff; */
+    padding: 0;
 }
 
 .post-card {
@@ -693,7 +700,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .post-strip {
     flex-basis: 100%;
-    min-height: max(3em, 9vh);
+    min-height: max(3em, 8vh);
 
     display: flex;
     flex-direction: row;
@@ -986,9 +993,11 @@ make sure this only happens on large viewports / desktop-ish devices.
 }
 
 @media (max-width: 650px) {
+/*
     .post-feed {
         padding-top: 5vw;
     }
+*/
 
     .post-card {
         margin-bottom: 5vw;
@@ -2970,6 +2979,7 @@ Usage (In Ghost editor):
 
 /* 12. Dark Mode
 /* ---------------------------------------------------------- */
+/*
 @media (prefers-color-scheme: dark) {
     body {
         color: rgba(255, 255, 255, 0.75);
@@ -3188,3 +3198,4 @@ Usage (In Ghost editor):
         color: color(var(--green) l(+5%) s(-5%));
     }
 }
+*/
